# MoneyManagementLibrary

./: .gitignore  CMakeLists.txt  README.md
doc/: AccountClass.md  Money.h.md  StartHere.md
docs/: TODO.md
include/: money.h
src/: account.cpp  account.h  money.cpp  money.h  transaction.cpp  transaction.h
test/: FullTest.cpp  accountConstructorTEST.cpp  transactionConstructorTEST.cpp
